fix defaults button in elasic on small devices

--- a/skins/elastic/sauserprefs.less
+++ b/skins/elastic/sauserprefs.less
@@ -238,12 +238,9 @@ div.address-input {
   min-width: 100px;
 }
 
-button.btn.saupusedefault::before {
+button.btn.saupusedefault::before,
+div.footer .saupusedefault::before {
   .font-icon-solid(@fa-var-undo);
-}
-
-#layout > .content > div.footer .saupusedefault {
-  display: none;
 }
 
 html.touch {
